fix radio button and checkbox alignment

--- a/src/components/commonComponents/styles.css
+++ b/src/components/commonComponents/styles.css
@@ -19,7 +19,6 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  margin: 0 6px 0 0;
   cursor: pointer;
   border: 1px solid var(--bc, var(--border));
   background: var(--b, var(--background));
